[package]
name = "ctclient"
description = "Certificate Transparency Log client suitable for monitoring, quick SCT validation, gossiping, etc."
license = "MIT"
repository = "https://github.com/micromaomao/ctclient"
version = "0.4.5"
authors = ["Mao Wtm <m@maowtm.org>"]
edition = "2024"
documentation = "https://docs.rs/ctclient"
readme = "README.md"

[[example]]
name = "simple_client"
path = "examples/simple_client/simple_client.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "gzip", "json"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
serde_urlencoded = "0.6.1"
base64 = "0.22"
openssl = "0.10.24"
foreign-types = "0.3.2"
openssl-sys = "0.9.56"
log = "0.4.7"
lazy_static = "1.4.0"
futures = "0.3.31"
async-stream = "0.3.6"

[dev-dependencies]
# for the example binary
env_logger = "0.11"
rusqlite = "0.37"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
openssl-sys = "0.9.56"
